Convert all content to English and add legal pages
- Convert Key Takeaways to English (post-1, post-2, post-3)
- FAQ sections already in English
- Remove email addresses from Schema and footer
- Create Privacy Policy page (privacy.html)
- Create Terms of Service page (terms.html)
- Update footer links to point to legal pages

All website content now in English (Korean only in communication)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,7 +70,6 @@
           ],
           "contactPoint": {
             "@type": "ContactPoint",
-            "email": "support@amazonreach.com",
             "contactType": "Customer Support",
             "availableLanguage": ["English", "Korean"]
           }
@@ -418,8 +417,8 @@
                 <div class="contact-info">
                     <div class="info-item">
                         <div class="icon">📧</div>
-                        <h4>Email</h4>
-                        <p>support@amazonreach.com</p>
+                        <h4>Contact Us</h4>
+                        <p>Use the form below to reach us</p>
                     </div>
                     <div class="info-item">
                         <div class="icon">⏰</div>
@@ -462,8 +461,8 @@
                     </div>
                     <div class="footer-column">
                         <h4>Legal</h4>
-                        <a href="#privacy">Privacy</a>
-                        <a href="#terms">Terms</a>
+                        <a href="/privacy.html">Privacy</a>
+                        <a href="/terms.html">Terms</a>
                     </div>
                 </div>
             </div>
