--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -5,41 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - AmazonReach</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="description"
+        content="Terms of Service for AmazonReach - Legal terms and conditions for using our service.">
     <link rel="stylesheet" href="/styles.css">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D7F4VJGJM3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-D7F4VJGJM3');
+    </script>
+
     <style>
         .legal-container {
             max-width: 900px;
-            margin: 120px auto 80px;
-            padding: 0 24px;
+            margin: 120px auto 60px;
+            padding: 40px 20px;
         }
 
         .legal-container h1 {
-            font-size: 42px;
+            font-size: 36px;
+            font-weight: 800;
+            color: var(--dark);
             margin-bottom: 16px;
         }
 
-        .legal-container .last-updated {
-            color: #64748B;
+        .last-updated {
+            color: #64748b;
             margin-bottom: 40px;
         }
 
         .legal-container h2 {
-            font-size: 28px;
-            margin-top: 48px;
-            margin-bottom: 16px;
+            font-size: 24px;
+            font-weight: 700;
+            color: var(--dark);
+            margin: 40px 0 16px;
         }
 
-        .legal-container p {
-            line-height: 1.8;
+        .legal-container p,
+        .legal-container li {
             color: #475569;
+            line-height: 1.8;
             margin-bottom: 16px;
         }
 
         .legal-container ul {
             margin-left: 24px;
-            line-height: 1.8;
-            color: #475569;
         }
     </style>
 </head>
@@ -49,13 +62,16 @@
     <nav class="nav">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-icon">🚀</span>
-                <span class="logo-text">AmazonReach</span>
+                <a href="/"
+                    style="text-decoration: none; display: flex; align-items: center; gap: 12px; color: inherit;">
+                    <span class="logo-icon">🚀</span>
+                    <span class="logo-text">AmazonReach</span>
+                </a>
             </div>
             <div class="nav-links">
                 <a href="/#features">Features</a>
                 <a href="/#pricing">Pricing</a>
-                <a href="/#about">About</a>
+                <a href="/blog/">Blog</a>
                 <a href="/login.html" class="nav-login">Sign In</a>
                 <a href="/register.html" class="nav-cta">Start Free Trial</a>
             </div>
@@ -64,167 +80,124 @@
 
     <div class="legal-container">
         <h1>Terms of Service</h1>
-        <p class="last-updated">Last Updated: February 5, 2026</p>
+        <p class="last-updated">Last Updated: February 14, 2026</p>
 
         <h2>1. Acceptance of Terms</h2>
-        <p>
-            By accessing and using AmazonReach ("Service"), you accept and agree to be bound by these Terms of Service
-            ("Terms"). If you do not agree to these Terms, you may not use the Service.
-        </p>
+        <p>By accessing and using AmazonReach ("the Service"), you accept and agree to be bound by the terms and
+            provision of this agreement.</p>
 
-        <h2>2. Service Description</h2>
-        <p>
-            AmazonReach provides a platform for Amazon sellers to manage global fulfillment, inventory, analytics, and
-            multi-channel integration. We offer subscription-based access to our dashboard, APIs, and related services.
-        </p>
+        <h2>2. Use License</h2>
+        <p>Permission is granted to temporarily access the Service for personal, non-commercial transitory viewing only.
+            This is the grant of a license, not a transfer of title, and under this license you may not:</p>
+        <ul>
+            <li>Modify or copy the materials</li>
+            <li>Use the materials for any commercial purpose or for any public display</li>
+            <li>Attempt to reverse engineer any software contained on the Service</li>
+            <li>Remove any copyright or other proprietary notations from the materials</li>
+            <li>Transfer the materials to another person or "mirror" the materials on any other server</li>
+        </ul>
 
         <h2>3. Account Registration</h2>
-        <p>To use our Service, you must:</p>
+        <p>To use certain features of the Service, you must register for an account. You agree to:</p>
         <ul>
-            <li>Be at least 18 years old</li>
-            <li>Provide accurate and complete registration information</li>
-            <li>Maintain the security of your account credentials</li>
-            <li>Notify us immediately of any unauthorized account access</li>
+            <li>Provide accurate, current, and complete information</li>
+            <li>Maintain and update your information to keep it accurate</li>
+            <li>Maintain the security of your password</li>
+            <li>Accept all responsibility for activity that occurs under your account</li>
+            <li>Notify us immediately of any unauthorized use of your account</li>
         </ul>
 
-        <h2>4. Subscription and Billing</h2>
-        <p><strong>Free Trial:</strong></p>
-        <ul>
-            <li>New users receive a 14-day free trial</li>
-            <li>No credit card required to start trial</li>
-            <li>Full access to all features during trial period</li>
-        </ul>
+        <h2>4. Subscription and Payment</h2>
+        <p>Some parts of the Service are billed on a subscription basis. You will be billed in advance on a recurring
+            and periodic basis. Billing cycles are set on a monthly or annual basis.</p>
+        <p>A valid payment method is required to process the payment for your subscription. You shall provide accurate
+            and complete billing information.</p>
 
-        <p><strong>Paid Subscriptions:</strong></p>
-        <ul>
-            <li>Billing cycles: Monthly or Annual</li>
-            <li>Payments processed via Stripe</li>
-            <li>Automatic renewal unless cancelled</li>
-            <li>Prices may change with 30 days notice</li>
-        </ul>
+        <h2>5. Free Trial</h2>
+        <p>We may offer a free trial subscription for a limited period. You may be required to enter your billing
+            information to sign up for the free trial. If you do enter your billing information when signing up for the
+            free trial, you will not be charged until the free trial has expired.</p>
 
-        <p><strong>Cancellation:</strong></p>
-        <ul>
-            <li>You may cancel anytime from your account settings</li>
-            <li>Cancellations take effect at the end of the current billing period</li>
-            <li>No refunds for partial months or unused time</li>
-        </ul>
+        <h2>6. Cancellation and Refunds</h2>
+        <p>You may cancel your subscription at any time through your account settings. Upon cancellation, you will
+            continue to have access to the Service until the end of your current billing period.</p>
+        <p>Refunds are provided on a case-by-case basis at our sole discretion.</p>
 
-        <h2>5. Acceptable Use</h2>
-        <p>You agree NOT to:</p>
+        <h2>7. Prohibited Uses</h2>
+        <p>You may not use the Service:</p>
         <ul>
-            <li>Violate any laws or regulations</li>
-            <li>Infringe on intellectual property rights</li>
-            <li>Upload malicious code or viruses</li>
-            <li>Attempt to gain unauthorized access to our systems</li>
-            <li>Use the Service for fraudulent activities</li>
-            <li>Resell or redistribute our Service without permission</li>
+            <li>In any way that violates any applicable law or regulation</li>
+            <li>To transmit any harmful or malicious code</li>
+            <li>To impersonate or attempt to impersonate the Company or another user</li>
+            <li>To engage in any automated use of the system</li>
+            <li>To interfere with or circumvent the security features of the Service</li>
         </ul>
-
-        <h2>6. Data and Privacy</h2>
-        <p>
-            Your use of the Service is also governed by our <a href="/privacy.html">Privacy Policy</a>. We collect
-            and process data as described in that policy.
-        </p>
-        <p><strong>Your Data Ownership:</strong></p>
-        <ul>
-            <li>You retain ownership of all business data you upload</li>
-            <li>We may use aggregated, anonymized data for analytics</li>
-            <li>You can export or delete your data at any time</li>
-        </ul>
-
-        <h2>7. Service Availability</h2>
-        <p>
-            We strive for 99.9% uptime but do not guarantee uninterrupted service. We may perform maintenance,
-            updates, or experience outages. We are not liable for any damages resulting from service interruptions.
-        </p>
 
         <h2>8. Intellectual Property</h2>
-        <p>
-            All content, features, and functionality of the Service (including software, text, images, and logos)
-            are owned by AmazonReach and protected by copyright, trademark, and other laws.
-        </p>
+        <p>The Service and its original content, features, and functionality are and will remain the exclusive property
+            of AmazonReach and its licensors. The Service is protected by copyright, trademark, and other laws.</p>
 
-        <h2>9. Limitation of Liability</h2>
-        <p>
-            TO THE MAXIMUM EXTENT PERMITTED BY LAW, AMAZONREACH SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL,
-            SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, INCLUDING LOSS OF PROFITS, DATA, OR BUSINESS OPPORTUNITIES.
-        </p>
-        <p>
-            Our total liability for any claim arising from these Terms or your use of the Service shall not exceed
-            the amount you paid us in the 12 months preceding the claim.
-        </p>
+        <h2>9. Disclaimer</h2>
+        <p>The Service is provided on an "AS IS" and "AS AVAILABLE" basis. We make no warranties, expressed or implied,
+            regarding the Service, including but not limited to warranties of merchantability, fitness for a particular
+            purpose, and non-infringement.</p>
 
-        <h2>10. Warranties Disclaimer</h2>
-        <p>
-            THE SERVICE IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
-            LIMITED TO WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT.
-        </p>
+        <h2>10. Limitation of Liability</h2>
+        <p>In no event shall AmazonReach, nor its directors, employees, partners, agents, suppliers, or affiliates, be
+            liable for any indirect, incidental, special, consequential or punitive damages, including without
+            limitation, loss of profits, data, use, goodwill, or other intangible losses.</p>
 
-        <h2>11. Third-Party Integrations</h2>
-        <p>
-            Our Service may integrate with third-party services (Amazon SP-API, Stripe, shipping carriers, etc.).
-            We are not responsible for the availability, accuracy, or functionality of these third-party services.
-        </p>
+        <h2>11. Termination</h2>
+        <p>We may terminate or suspend your account and bar access to the Service immediately, without prior notice or
+            liability, under our sole discretion, for any reason whatsoever, including without limitation if you breach
+            the Terms.</p>
 
-        <h2>12. Termination</h2>
-        <p>
-            We may suspend or terminate your account if you violate these Terms or engage in fraudulent activity.
-            Upon termination, your right to use the Service ceases immediately.
-        </p>
+        <h2>12. Governing Law</h2>
+        <p>These Terms shall be governed and construed in accordance with the laws of the United States, without regard
+            to its conflict of law provisions.</p>
 
         <h2>13. Changes to Terms</h2>
-        <p>
-            We reserve the right to modify these Terms at any time. We will notify you of significant changes via
-            email or through the Service. Continued use after changes constitutes acceptance of the new Terms.
-        </p>
+        <p>We reserve the right to modify or replace these Terms at any time. If a revision is material, we will provide
+            at least 30 days notice prior to any new terms taking effect.</p>
 
-        <h2>14. Governing Law</h2>
-        <p>
-            These Terms are governed by the laws of the State of California, USA, without regard to conflict of law
-            provisions. Any disputes shall be resolved in the courts of San Francisco County, California.
-        </p>
-
-        <h2>15. Contact Us</h2>
-        <p>
-            For questions about these Terms, please contact us at:
-        </p>
-        <p>
-            <strong>Email:</strong> <a href="mailto:legal@amazonreach.com">legal@amazonreach.com</a><br>
-            <strong>Address:</strong> AmazonReach, Inc., 123 Global Street, San Francisco, CA 94105
-        </p>
+        <h2>14. Contact Us</h2>
+        <p>If you have any questions about these Terms, please contact us through our <a href="/#contact"
+                style="color: var(--primary);">contact form</a>.</p>
     </div>
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-brand">
-                <div class="logo">
-                    <span class="logo-icon">🚀</span>
-                    <span class="logo-text">AmazonReach</span>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <div class="logo">
+                        <span class="logo-icon">🚀</span>
+                        <span class="logo-text">AmazonReach</span>
+                    </div>
+                    <p>Scale your Amazon business globally</p>
                 </div>
-                <p>Scale your Amazon business globally</p>
+                <div class="footer-links">
+                    <div class="footer-column">
+                        <h4>Product</h4>
+                        <a href="/#features">Features</a>
+                        <a href="/#pricing">Pricing</a>
+                        <a href="/dashboard/dashboard.html">Dashboard</a>
+                    </div>
+                    <div class="footer-column">
+                        <h4>Company</h4>
+                        <a href="/#about">About</a>
+                        <a href="/blog/">Blog</a>
+                    </div>
+                    <div class="footer-column">
+                        <h4>Legal</h4>
+                        <a href="/privacy.html">Privacy</a>
+                        <a href="/terms.html">Terms</a>
+                    </div>
+                </div>
             </div>
-            <div class="footer-links">
-                <div class="footer-column">
-                    <h4>Product</h4>
-                    <a href="/#features">Features</a>
-                    <a href="/#pricing">Pricing</a>
-                </div>
-                <div class="footer-column">
-                    <h4>Company</h4>
-                    <a href="/#about">About</a>
-                    <a href="/#contact">Contact</a>
-                </div>
-                <div class="footer-column">
-                    <h4>Legal</h4>
-                    <a href="/privacy.html">Privacy</a>
-                    <a href="/terms.html">Terms</a>
-                </div>
+            <div class="footer-bottom">
+                <p>&copy; 2026 AmazonReach. All rights reserved.</p>
             </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 AmazonReach. All rights reserved.</p>
         </div>
     </footer>
 </body>
