Add Review Schema and Open Graph tags to all remaining pages
- reviews.html: Add AggregateRating Schema (4.9/5, 4 reviews) + Review Schema + Open Graph
- register.html: Add Open Graph tags + canonical URL
- login.html: Add Open Graph tags + canonical URL

Expected impact:
- Google Rich Snippets for reviews page (star ratings)
- Better social media sharing for all pages
- Improved SEO coverage across entire site

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,6 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://amazonreach.pages.dev/login.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://amazonreach.pages.dev/login.html">
+    <meta property="og:title" content="Sign In - AmazonReach">
+    <meta property="og:description"
+        content="Access your AmazonReach dashboard. Manage your global Amazon business with AI-powered analytics and fulfillment tools.">
+    <meta property="og:image" content="https://amazonreach.pages.dev/images/login-og.jpg">
+
+    <!-- Twitter Card -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://amazonreach.pages.dev/login.html">
+    <meta property="twitter:title" content="Sign In - AmazonReach">
+    <meta property="twitter:description" content="Access your AmazonReach dashboard. AI-powered Amazon analytics.">
+    <meta property="twitter:image" content="https://amazonreach.pages.dev/images/login-og.jpg">
+
     <style>
         * {
             margin: 0;
