--- a/frontend/register.html
+++ b/frontend/register.html
@@ -19,6 +19,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://amazonreach.pages.dev/register.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://amazonreach.pages.dev/register.html">
+    <meta property="og:title" content="Start Free Trial - AmazonReach">
+    <meta property="og:description"
+        content="Scale your Amazon business globally. 14-day free trial. No credit card required. AI-powered analytics and global fulfillment.">
+    <meta property="og:image" content="https://amazonreach.pages.dev/images/register-og.jpg">
+
+    <!-- Twitter Card -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://amazonreach.pages.dev/register.html">
+    <meta property="twitter:title" content="Start Free Trial - AmazonReach">
+    <meta property="twitter:description"
+        content="Scale your Amazon business globally. 14-day free trial. No credit card required.">
+    <meta property="twitter:image" content="https://amazonreach.pages.dev/images/register-og.jpg">
+
     <style>
         * {
             margin: 0;
