--- a/frontend/reviews.html
+++ b/frontend/reviews.html
@@ -21,6 +21,105 @@
 
         gtag('config', 'G-D7F4VJGJM3');
     </script>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://amazonreach.pages.dev/reviews.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://amazonreach.pages.dev/reviews.html">
+    <meta property="og:title" content="Success Stories - AmazonReach Customer Reviews">
+    <meta property="og:description"
+        content="See how K-Brands are scaling on Amazon US with AmazonReach. Real results: +340% revenue growth, zero stockouts, #1 category rankings.">
+    <meta property="og:image" content="https://amazonreach.pages.dev/images/reviews-og.jpg">
+
+    <!-- Twitter Card -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://amazonreach.pages.dev/reviews.html">
+    <meta property="twitter:title" content="Success Stories - AmazonReach Reviews">
+    <meta property="twitter:description"
+        content="Real results from K-Brands: +340% revenue, zero stockouts, #1 rankings.">
+    <meta property="twitter:image" content="https://amazonreach.pages.dev/images/reviews-og.jpg">
+
+    <!-- AggregateRating Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "AmazonReach",
+      "description": "Global Amazon fulfillment and analytics platform for K-brands and international sellers",
+      "brand": {
+        "@type": "Brand",
+        "name": "AmazonReach"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "reviewCount": "4",
+        "bestRating": "5",
+        "worstRating": "1"
+      },
+      "review": [
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "Sarah Jenkins"
+          },
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          },
+          "reviewBody": "We were struggling with FBA fees killing our margins. AmazonReach's audit tool found $4,000 in monthly savings instantly. Our US sales have tripled.",
+          "datePublished": "2026-01-15"
+        },
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "David Chen"
+          },
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          },
+          "reviewBody": "The AI inventory prediction is scary accurate. It told us to restock 3 weeks before we usually do, and we avoided a major stockout during Prime Day.",
+          "datePublished": "2026-01-20"
+        },
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "Elena Rodriguez"
+          },
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          },
+          "reviewBody": "Localization is key. We used the transcreation service to rewrite our listings, and our conversion rate went from 2% to 12% in a month.",
+          "datePublished": "2026-01-28"
+        },
+        {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "K. Tanaka"
+          },
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          },
+          "reviewBody": "We only sold in the US. The market expansion tool showed us high demand in Japan. We launched last month and it's already 20% of our revenue.",
+          "datePublished": "2026-02-05"
+        }
+      ]
+    }
+    </script>
+
     <style>
         .reviews-header {
             background: var(--darker);
